# genmprim

./: 3d_mp.json  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mp.json  package.xml
data/: project_path.h  projectpath.h.in
include/: utils.hpp
plot3d/: QPlot3D.h  surfacegraph.cpp  surfacegraph.h
spiral_constraint/: CMakeLists.txt
spiral_constraint/include/: directCollocationSolver.h
spiral_constraint/src/: directCollocationSolver.cpp
src/: utils.cpp
